force-app/main/default/objects/nd_picklist__c/nd_picklist__c.object-meta.xml
<CustomObject>
    <label>nd picklist</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>nd picklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nd picklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>