force-app/main/default/objects/nd_picklist__c/fields/code__c.field-meta.xml
<CustomField>
    <fullName>code__c</fullName>
    <label>code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>