force-app/main/default/objects/nd_picklist__c/fields/code_record_id__c.field-meta.xml
<CustomField>
    <fullName>code_record_id__c</fullName>
    <externalId>true</externalId>
    <label>code record id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>