force-app/main/default/objects/nd_picklist__c/fields/dedupe_check__c.field-meta.xml
<CustomField>
    <fullName>dedupe_check__c</fullName>
    <label>dedupe check</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>