force-app/main/default/objects/nd_picklist__c/fields/default_value__c.field-meta.xml
<CustomField>
    <fullName>default_value__c</fullName>
    <defaultValue>false</defaultValue>
    <label>default value</label>
    <type>Checkbox</type>
</CustomField>