force-app/main/default/objects/nd_picklist__c/fields/field_api_name__c.field-meta.xml
<CustomField>
    <fullName>field_api_name__c</fullName>
    <label>field api name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>