force-app/main/default/objects/nd_picklist__c/fields/global_master_label__c.field-meta.xml
<CustomField>
    <fullName>global_master_label__c</fullName>
    <label>global master label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>