force-app/main/default/objects/nd_picklist__c/fields/global_value_set_description__c.field-meta.xml
<CustomField>
    <fullName>global_value_set_description__c</fullName>
    <label>global value set description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>