force-app/main/default/objects/nd_picklist__c/fields/namespace_prefix__c.field-meta.xml
<CustomField>
    <fullName>namespace_prefix__c</fullName>
    <label>namespace prefix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>