force-app/main/default/objects/nd_picklist__c/fields/object_api_name__c.field-meta.xml
<CustomField>
    <fullName>object_api_name__c</fullName>
    <label>object api name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>