force-app/main/default/objects/nd_picklist__c/fields/unique_id__c.field-meta.xml
<CustomField>
    <fullName>unique_id__c</fullName>
    <externalId>true</externalId>
    <label>unique id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>