force-app/main/default/objects/nd_picklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>object_api_name__c</columns>
    <columns>field_api_name__c</columns>
    <columns>code__c</columns>
    <columns>code_record_id__c</columns>
    <columns>description__c</columns>
    <columns>global_master_label__c</columns>
    <columns>global_value_set_description__c</columns>
    <columns>unique_id__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>